--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/legacy.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/legacy.css
@@ -1,5 +1,5 @@
 /**
- * @version: $Id: sobipro.css 2006 2011-11-23 15:34:46Z Radek Suski $
+ * @version: $Id: legacy.css 2006 2011-11-23 15:34:46Z Radek Suski $
  * @package: SobiPro Library
  * ===================================================
  * @author
@@ -7,26 +7,37 @@
  * Email: sobi[at]sigsiu.net
  * Url: http://www.Sigsiu.NET
  * ===================================================
- * @copyright Copyright (C) 2006 - 2011 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+ * @copyright Copyright (C) 2006 - 2012 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
  * @license see http://www.gnu.org/licenses/lgpl.html GNU/LGPL Version 3.
  * You can use, redistribute this file and/or modify it under the terms of the GNU Lesser General Public License version 3
  * ===================================================
- * $Date: 2011-11-23 16:34:46 +0100 (Wed, 23 Nov 2011) $
+ * $Date: 2011-11-23 16:34:46 +0100 (Mi, 23 Nov 2011) $
  * $Revision: 2006 $
  * $Author: Radek Suski $
- * File location: components/com_sobipro/media/css/adm/sobipro.css $
+ * File location: components/com_sobipro/media/css/bootstrap/sobipro.css $
  */
 
 #toolbar-box {
-	display: none;
+	display: block
 }
-.submenu-box, div.m {
-	background-color: #ffffff;
+
+div.SPFListAlias {
+	font-size: 0.9em !important;
+}
+
+input, textarea, select, button {
+	border: 1px solid #ccc !important;
+	font-size: 1.091em !important;
+}
+
+fieldset label {
+	clear: none !important;
+	float: none !important;
 }
 
 element.style {
-	float:none !important;
-	width:auto !important;
+	float: none !important;
+	width: auto !important;
 }
 
 fieldset input, fieldset textarea, fieldset select, fieldset img, fieldset button {
@@ -35,17 +46,18 @@ fieldset input, fieldset textarea, fieldset select, fieldset img, fieldset butto
 }
 
 fieldset.adminform label {
-	width:auto !important;
+	width: auto !important;
 }
+
 fieldset.adminform {
-	margin: 0px!important;
+	margin: 0px !important;
 }
 
 fieldset label {
-    clear: none !important;
-    display:inline !important;
-    float: none !important;
-    margin:0 !important;
+	clear: none !important;
+	display: inline !important;
+	float: none !important;
+	margin: 0 !important;
 }
 
 form#SPadmintable a.selected {
@@ -57,41 +69,46 @@ td.key {
 	min-width: 100px;
 	padding: 8px;
 }
+
 table.admintable td.key {
-    text-align: right;
-    width: 140px;
-    padding: 4px;
+	text-align: right;
+	width: 140px;
+	padding: 4px;
 }
 
 div.width-70 {
-	width: 65%!important;
-	float:left;
+	width: 65% !important;
+	float: left;
 }
 
 div.width-30 {
-    float: left;
-    width: 30%;
+	float: left;
+	width: 30%;
 }
 
 div.SPCpTabs {
 	background: #f9f9f9;
 }
+
 div.SPCpTabs h4,
 div.SPCpTabNews h4 {
 	font-size: 14px;
 	margin-bottom: 8px;
 	margin-top: 4px;
 }
+
 div.SPCpTabs h1,
 div.SPCpTabNews h1 {
 	margin: 10px 0 5px 10px;
 	padding-bottom: 0px;
 	font-size: 15px;
 }
+
 div.SPCpTabs p,
 div.SPCpTabNews p {
 	margin: 0 0 4px 10px;
 }
+
 span.SPCPCurrentVer {
 	font-size: 14px;
 }
@@ -101,7 +118,7 @@ div#SPVerUpd {
 }
 
 /*  hide Joomla! pagebreak and readmore buttons in editor area  */
-div.button2-left div.pagebreak,div.button2-left div.readmore {
+div.button2-left div.pagebreak, div.button2-left div.readmore {
 	display: none;
 }
 
@@ -111,8 +128,7 @@ table.admintable tbody tr.row1 {
 	border-top: 1px solid #fff;
 }
 
-table.admintable tbody tr.row0:hover td,table.admintable tbody tr.row1:hover td
-	{
+table.admintable tbody tr.row0:hover td, table.admintable tbody tr.row1:hover td {
 	background-color: #ffd;
 }
 
@@ -122,20 +138,22 @@ table.admintable tbody tr.row1 td {
 }
 
 table.adminlist {
-	background-color: #E7E7E7!important;
-}
-table.adminlist td {
-	padding: 0px!important;
-	padding-left: 4px!important;
-	height: 24px!important;
-}
-table.adminlist td a {
-	font-size: 1em!important;
-}
-#submenu a:hover, #submenu a.active, #submenu span.nolink.active {
-	background-color: #F4F4F4!important;
+	background-color: #E7E7E7 !important;
 }
 
+table.adminlist td {
+	padding: 0px !important;
+	padding-left: 4px !important;
+	height: 24px !important;
+}
+
+table.adminlist td a {
+	font-size: 1em !important;
+}
+
+#submenu a:hover, #submenu a.active, #submenu span.nolink.active {
+	background-color: #F4F4F4 !important;
+}
 
 .sheader {
 	font-size: 18px;
@@ -168,7 +186,7 @@ li.spOption, li.spOptionGroup, li.sspOption, li.spOptionHead, li.sspOptionHead {
 	border-right-style: solid;
 	border-right-color: #e9e9e9;
 	border-style: solid;
-	clear:both;
+	clear: both;
 }
 
 li.sspOption, li.sspOptionHead {
@@ -176,12 +194,11 @@ li.sspOption, li.sspOptionHead {
 }
 
 li.spOption, li.spOptionGroup {
-	width: 580px!important;
+	width: 580px !important;
 }
 
 div.SPhandle, div.sSPhandle {
-    background-image:
-        url(../../../../media/sobipro/16x16/option-move.png);
+	background-image: url(../../../../media/sobipro/16x16/option-move.png);
 	height: 16px;
 	width: 16px;
 	margin-right: 0px;
@@ -218,8 +235,7 @@ li.sspOption {
 }
 
 div.SPOptDel {
-    background-image:
-        url(../../../../media/sobipro/16x16/option-delete.png);
+	background-image: url(../../../../media/sobipro/16x16/option-delete.png);
 	height: 16px;
 	width: 16px;
 	cursor: pointer;
@@ -232,8 +248,8 @@ li.sspOption div.SPOptDel {
 }
 
 div.spOptGroup {
-	margin-top:5px;
-	margin-bottom:2px;
+	margin-top: 5px;
+	margin-bottom: 2px;
 	float: left;
 	background-color: #CCCBCB;
 }
@@ -262,115 +278,100 @@ li.spOptionGroup {
 	clear: both;
 }
 
-.spicon-48-SobiPro {
-	background-image:
-		url(../../../../media/sobipro/48x48/folder-sobipro.png);
+.icon-48-SobiPro {
+	background-image: url(../../../../media/sobipro/48x48/folder-sobipro.png);
 }
 
-.spicon-48-SobiApplication {
-	background-image:
-		url(../../../../media/sobipro/48x48/folder-application.png);
+.icon-48-SobiApplication {
+	background-image: url(../../../../media/sobipro/48x48/folder-application.png);
 }
 
-.spicon-48-SobiApplicationSection {
-	background-image:
-		url(../../../../media/sobipro/48x48/folder-application-section.png);
+.icon-48-SobiApplicationSection {
+	background-image: url(../../../../media/sobipro/48x48/folder-application-section.png);
 }
 
-.spicon-48-SobiTemplate {
-	background-image:
-		url(../../../../media/sobipro/48x48/folder-templates.png);
+.icon-48-SobiTemplate {
+	background-image: url(../../../../media/sobipro/48x48/folder-templates.png);
 }
 
-.spicon-48-SobiTemplateSection {
-	background-image:
-		url(../../../../media/sobipro/48x48/folder-template-section.png);
+.icon-48-SobiTemplateSection {
+	background-image: url(../../../../media/sobipro/48x48/folder-template-section.png);
 }
 
-.spicon-48-SobiSection {
-	background-image:
-		url(../../../../media/sobipro/48x48/folder-section.png);
+.icon-48-SobiSection {
+	background-image: url(../../../../media/sobipro/48x48/folder-section.png);
 }
 
-.spicon-48-SobiSectionCfg {
-	background-image:
-		url(../../../../media/sobipro/48x48/folder-section-cfg.png);
+.icon-48-SobiSectionCfg {
+	background-image: url(../../../../media/sobipro/48x48/folder-section-cfg.png);
 }
 
-.spicon-48-SobiCategory {
-	background-image:
-		url(../../../../media/sobipro/48x48/folder-category.png);
+.icon-48-SobiCategory {
+	background-image: url(../../../../media/sobipro/48x48/folder-category.png);
 }
 
-.spicon-48-SobiCatList {
-	background-image:
-		url(../../../../media/sobipro/48x48/folder-categories.png);
+.icon-48-SobiCatList {
+	background-image: url(../../../../media/sobipro/48x48/folder-categories.png);
 }
 
-.spicon-48-SobiFields {
-	background-image:
-		url(../../../../media/sobipro/48x48/folder-fieldsmanager.png);
+.icon-48-SobiFields {
+	background-image: url(../../../../media/sobipro/48x48/folder-fieldsmanager.png);
 }
 
-.spicon-48-SobiFieldList {
-	background-image:
-		url(../../../../media/sobipro/48x48/fields.png);
+.icon-48-SobiFieldList {
+	background-image: url(../../../../media/sobipro/48x48/fields.png);
 }
 
-.spicon-48-SobiConfig {
-	background-image:
-		url(../../../../media/sobipro/48x48/folder-configuration.png);
+.icon-48-SobiConfig {
+	background-image: url(../../../../media/sobipro/48x48/folder-configuration.png);
 }
 
-.spicon-48-SobiEdit {
-	background-image:
-		url(../../../../media/sobipro/48x48/editor.png);
+.icon-48-SobiEdit {
+	background-image: url(../../../../media/sobipro/48x48/editor.png);
 }
 
-.spicon-48-SobiFieldEdit {
-	background-image:
-		url(../../../../media/sobipro/48x48/edit-rename.png);
+.icon-48-SobiFieldEdit {
+	background-image: url(../../../../media/sobipro/48x48/edit-rename.png);
 }
 
-.spicon-48-SobiEntries {
-	background-image:
-		url(../../../../media/sobipro/48x48/entries.png);
-}
-.spicon-48-SobiUser {
-	background-image:
-		url(../../../../media/sobipro/48x48/sobipro-acl-edit.png);
-}
-.spicon-48-SobiLevels {
-	background-image:
-		url(../../../../media/sobipro/48x48/sobipro-acl.png);
+.icon-48-SobiEntries {
+	background-image: url(../../../../media/sobipro/48x48/entries.png);
 }
 
-.spicon-32-delete {
-	background-image: url(../../../../media/sobipro/32x32/delete.png)!important;
+.icon-48-SobiUser {
+	background-image: url(../../../../media/sobipro/48x48/sobipro-acl-edit.png);
 }
 
-.spicon-32-download {
+.icon-48-SobiLevels {
+	background-image: url(../../../../media/sobipro/48x48/sobipro-acl.png);
+}
+
+.icon-32-delete {
+	background-image: url(../../../../media/sobipro/32x32/delete.png) !important;
+}
+
+.icon-32-download {
 	background-image: url(../../../../media/sobipro/32x32/download.png);
 }
 
-.spicon-32-list {
+.icon-32-list {
 	background-image: url(../../../../media/sobipro/32x32/software-update.png);
 }
 
-.spicon-32-cleanCache {
+.icon-32-cleanCache {
 	background-image: url(../../../../media/sobipro/32x32/eraser.png);
 }
 
-.spicon-32-document-save-all {
+.icon-32-document-save-all {
 	background-image: url(../../../../media/sobipro/32x32/document-save-all.png);
 }
 
-.spicon-32-save {
-	background-image: url(../../../../media/sobipro/32x32/document-save.png)!important;
+.icon-32-save {
+	background-image: url(../../../../media/sobipro/32x32/document-save.png) !important;
 }
 
-.spicon-32-help {
-	background-image: url(../../../../media/sobipro/32x32/sobipro-help.png)!important;
+.icon-32-help {
+	background-image: url(../../../../media/sobipro/32x32/sobipro-help.png) !important;
 }
 
 div#spTpl {
@@ -386,9 +387,10 @@ div.SPPbarMsgbox {
 	font-weight: bold;
 	color: #999999;
 	text-align: center;
-	clear:both;
+	clear: both;
 	vertical-align: top;
 }
+
 div.SPPbarMessage {
 	font-family: Arial, Helvetica;
 	font-size: 12px;
@@ -403,7 +405,7 @@ div.SPPbarProgressbar {
 	background-repeat: no-repeat;
 	height: 60px;
 	width: 514px;
-	margin:0px 10px 10px 10px;
+	margin: 0px 10px 10px 10px;
 }
 
 div.SPPbarPercentbox {
@@ -417,7 +419,7 @@ div.SPPbarPercentbox {
 }
 
 del a, del {
-	color: red!important;
+	color: red !important;
 	font-weight: bold;
 }
 
@@ -427,11 +429,12 @@ div.SPCpanelIcon {
 	float: left;
 	margin: 2px;
 	padding: 5px;
-	text-align:center;
-	border-color:#cccccc;
-	border-style:solid;
-	border-width:thin;
+	text-align: center;
+	border-color: #cccccc;
+	border-style: solid;
+	border-width: thin;
 }
+
 div.SPCpanelIcon a {
 	text-decoration: none;
 }
